--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^1.18.9"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
